--- a/frontend/package.json
+++ b/frontend/package.json
@@ -53,6 +53,7 @@
     "next-themes": "^0.4.6",
     "react": "^19.2.0",
     "react-barcode": "^1.6.1",
+    "react-day-picker": "^9.11.2",
     "react-dom": "^19.2.0",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.66.1",
